[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "expense-tracker"
version = "0.1.0"
description = "Expense tracking app that analyzes iMessage payment data"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["pandas", "matplotlib", "tabulate", "sqlalchemy"]

[project.scripts]
expense-tracker = "src.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
